--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="nav_header_title">Your Account</string>
     <string name="nav_header_subtitle">Credential: </string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_search">Search</string>
 
     <string name="menu_home">Home</string>
     <string name="menu_chat">Chat</string>
