--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -67,4 +67,16 @@
         libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
         vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
     </string>
+    <string name="comment_content">Content</string>
+    <string name="comment_username">Username</string>
+    <string name="enter_message">Type a message</string>
+    <string name="send">Send</string>
+    <string name="message_sent">Text sent</string>
+    <string name="message_received">Text received</string>
+    <string name="book_title">Book Title</string>
+    <string name="book_author">Author</string>
+    <string name="book_category">Category</string>
+    <string name="view_pdf">View PDF</string>
+    <string name="input_comment">Enter your comment here</string>
+    <string name="post">Post</string>
 </resources>
