--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,8 @@
     <string name="view_pdf">View PDF</string>
     <string name="input_comment">Enter your comment here</string>
     <string name="post">Post</string>
+    <string name="title_activity_user_manager">UserManager</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
